The navbar was stacked below the scroll buttons in the unit.html webpage. But now this has been solved. The navbar is given z-index 2 and scroll buttons are given z-index 1.

--- a/style.css
+++ b/style.css
@@ -176,7 +176,7 @@ h1 {
     position:fixed;
     flex-direction:column;
     height:100%;
-    z-index:1;
+    z-index:2;
     width:0;
     overflow:hidden;
   }
@@ -319,7 +319,7 @@ h1 {
   display:none;
   font-size:1.5rem;
   padding:0.1rem 1rem;
-  z-index:10;
+  z-index:1;
   background-color:rgba(0,0,0,0.5);
   font-weight:bold;
   color:white;
